# ADGM_Copilot_

./: .env.example  .gitignore  ADGM_NEXUS_PROJECT_DOCUMENTATION.txt  Data Sources.docx  README.md  main.py  pyproject.toml
backend/: main.py
backend/app/: __init__.py
backend/app/agent/: __init__.py  graph.py  nodes.py  state.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  constants.py  logging.py
backend/app/db/: __init__.py  base.py  health.py  init_db.py  postgres.py  qdrant.py  redis.py
backend/app/models/: __init__.py  audit_log.py  document.py  generated_clause.py  mixins.py  query_log.py  recommendation.py  review.py  user.py  violation.py
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py  analytics_result.py  audit_log.py  base.py  case_result.py  clause_result.py  document.py  rag.py  (+8 more)
data/processed/: chunks.jsonl  indexing_report.json  ingestion_report.json  source_registry.json
docker/: docker-compose.yml
docs/: architecture.md
nextjs-frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
nextjs-frontend/.next/: app-build-manifest.json  trace
scripts/: extract_source_registry.py  index_knowledge_base.py  ingest_knowledge_base.py  sample_shareholder_resolution.docx  seed_historical_reviews.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9_e2e.py  test_phase9_routes.py  test_phase9_units.py
(+470 files in other folders)
