[project]
name = "adgm-compliance-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=1.0.0",
    "groq>=0.13.0",
    "rank-bm25>=0.2.2",
    "langchain>=1.3.4",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
